{
    "home": "ホーム",
    "library": "ライブラリ",
    "settings": "設定",
    "youtube": "YouTube",
    "search": "検索",
    "playlists": "プレイリスト",
    "tracks": "曲",
    "albums": "アルバム",
    "folders": "フォルダ",
...
    "pick_image": "Pick Image",
    "email_optional": "Email (Optional)",
    "problem": "Problem",
    "description": "Description",
    "detailed_guide": "Detailed guide & help",
    "add_radio": "Add Radio Station",
    "settings_btn": "Settings",
    "permissions_required": "Permissions Required",
    "permissions_permanently_denied": "Some permissions are permanently denied. Please enable them in system settings."
}
